update: adiciona o footer e da denovo a responsividade da navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR" class="scroll-smooth"></html>
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./public/images/logo-sem-fundo.png" type="image/x-icon">
