finish: home finalizado, nav-bar reformulada, incluindo as cores e do footer tambem

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html lang="pt-BR" class="scroll-smooth"></html>
+<html lang="pt-BR" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./public/images/logo-sem-fundo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passa a Bola</title>
+    <link rel="icon" href="/logo-sem-fundo.png" type="image/png" />
+    <link rel="shortcut icon" href="/logo-sem-fundo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/logo-sem-fundo.png" />
   </head>
   <body>
     <div id="root"></div>
