--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passa a Bola</title>
-    <link rel="icon" href="/logo-sem-fundo.png" type="image/png" />
-    <link rel="shortcut icon" href="/logo-sem-fundo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/logo-sem-fundo.png" />
+    <link rel="icon" href="/images/logo-sem-fundo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/logo-sem-fundo.png" />
   </head>
   <body>
     <div id="root"></div>
